import { BaseProductDto } from './BaseProductDto';

export class AddProductDto extends BaseProductDto {}
