import { BaseCategoryDto } from './BaseCategoryDto';

export class EditCategoryDto extends BaseCategoryDto {}
